Refactor user and company creation logic to set initial state to PENDIENTE and update active status handling